--- a/cube.html
+++ b/cube.html
@@ -1,4 +1,11 @@
 
+dfghd
+tejfjfccf
+
+fgmcfmgh,
+tzjsrkjdkgºpl<º,g4
+
+
 
 <script type="module">
     import * as THREE from '../../build/three.module.js';
@@ -15,3 +22,4 @@
     <canvas id="c"></canvas>
 </body>    
 
+<!--  -->
