--- a/cube.html
+++ b/cube.html
@@ -1,19 +1,26 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <canvas id="c"></canvas>
+</body>
 
 <script type="module">
     import * as THREE from '../../build/three.module.js';
 
     function main() {
-    const canvas = document.querySelector('#c');
-    const renderer = new THREE.WebGLRenderer({canvas});
+        const canvas = document.querySelector('#c');
+        const renderer = new THREE.WebGLRenderer({canvas});
     }
 
-
 </script>
+</html>
 
-<body>
-    <canvas id="c"></canvas>
-</body>    
 
-<!--  -->
+
+
+
+
