--- a/cube.html
+++ b/cube.html
@@ -2,21 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>three.js css2d - label</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+    <link type="text/css" rel="stylesheet" href="main.css">
+    <style>
+        .label {
+            color: #FFF;
+            font-family: sans-serif;
+            padding: 2px;
+            background: rgba( 0, 0, 0, .6 );
+        }
+    </style>
 </head>
 <body>
+    <div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> css2d - label</div>
     <canvas id="c"></canvas>
+
+    <script type="module">
+        import * as THREE from '../../build/three.module.js';
+
+        function main() {
+            const canvas = document.querySelector('#c');
+            const renderer = new THREE.WebGLRenderer({canvas});
+        }
+        const fov = 75;
+        const aspect = 2;  // the canvas default
+        const near = 0.1;
+        const far = 5;
+        const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+        camera.position.z = 2;
+
+        const scene = new THREE.Scene();
+        const boxWidth = 1;
+        const boxHeight = 1;
+        const boxDepth = 1;
+        const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+
+        const material = new THREE.MeshBasicMaterial({color: 0x44aa88});
+
+        const cube = new THREE.Mesh(geometry, material);
+
+        scene.add(cube);
+
+        renderer.render(scene, camera);
+
+
+    </script>
+
 </body>
 
-<script type="module">
-    import * as THREE from '../../build/three.module.js';
 
-    function main() {
-        const canvas = document.querySelector('#c');
-        const renderer = new THREE.WebGLRenderer({canvas});
-    }
-
-</script>
 </html>
 
 
