--- a/Example/cube.html
+++ b/Example/cube.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>three.js css2d - label</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
-    <link type="text/css" rel="stylesheet" href="main.css">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <title>Three.js - Fundamentals</title>
     <style>
-        .label {
-            color: #FFF;
-            font-family: sans-serif;
-            padding: 2px;
-            background: rgba( 0, 0, 0, .6 );
-        }
-    </style>
-</head>
-<body>
-    <div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> css2d - label</div>
-    <canvas id="c"></canvas>
-    <script type="module">
-        import * as THREE from '../../build/three.module.js';
 
-        function main() {
-            const canvas = document.querySelector('#c');
-            const renderer = new THREE.WebGLRenderer({canvas});
-            const fov = 75;
-            const aspect = 2;  // the canvas default
-            const near = 0.1;
-            const far = 5;
-            const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-            camera.position.z = 2;
-            const scene = new THREE.Scene();
-            const boxWidth = 1;
-            const boxHeight = 1;
-            const boxDepth = 1;
-            const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
-            const material = new THREE.MeshBasicMaterial({color: 0x44aa88});
-            const cube = new THREE.Mesh(geometry, material);
-            scene.add(cube);
-            renderer.render(scene, camera);
-        }
-        main();
-    </script>
-</body>
+    </style>
+  </head>
+  <body>
+<canvas id="c"></canvas>
+  <script  type="importmap">{
+	"imports": {
+		"three": "https://threejs.org/build/three.module.js"
+	}
+}</script><!-- Remove this when import maps will be widely supported -->
+<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+  </body>
+
+  <script type="module">
+// Three.js - Fundamentals
+// from https://threejs.org/manual/examples/fundamentals.html
+
+    import * as THREE from 'three';
+
+    function main() {
+    const canvas = document.querySelector('#c');
+    const renderer = new THREE.WebGLRenderer({canvas});
+
+    const fov = 75;
+    const aspect = 2;  // the canvas default
+    const near = 0.1;
+    const far = 5;
+    const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+    camera.position.z = 2;
+
+    const scene = new THREE.Scene();
+
+    const boxWidth = 1;
+    const boxHeight = 1;
+    const boxDepth = 1;
+    const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+
+    const material = new THREE.MeshBasicMaterial({color: 0x44aa88});  // greenish blue
+
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    renderer.render(scene, camera);
+    }
+
+    main();
+
+  </script>
+
 </html>
 
 
