--- a/Example/cube.html
+++ b/Example/cube.html
@@ -1,28 +1,20 @@
+<!-- https://threejs.org/manual/#en/fundamentals -->
+<!-- https://codesandbox.io/s/hgfez7 -->
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Fundamentals</title>
-    <style>
 
-    </style>
-  </head>
   <body>
 <canvas id="c"></canvas>
-  <script  type="importmap">{
-	"imports": {
-		"three": "https://threejs.org/build/three.module.js"
-	}
-}</script><!-- Remove this when import maps will be widely supported -->
-<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   </body>
 
   <script type="module">
 // Three.js - Fundamentals
 // from https://threejs.org/manual/examples/fundamentals.html
+// Alterado ligfeiramente para importar o Three.js através do site
+// 
 
-    import * as THREE from 'three';
+    import * as THREE from 'https://unpkg.com/three@0.129.0/build/three.module.js';
 
     function main() {
     const canvas = document.querySelector('#c');
