--- a/CreatingAScene/MyFirstThreeJs.html
+++ b/CreatingAScene/MyFirstThreeJs.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>My first three.js app</title>
 		<style>
-			body { margin: 0; }
+			body { margin: 0; 				
+			}
 		</style>
 	</head>
 	<body>
@@ -13,11 +14,26 @@
 			// Our Javascript will go here.
             const scene = new THREE.Scene();
             const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-//            const camera2 = new THREE.OrthographicCamera( width / - 2, width / 2, height / 2, height / - 2, 1, 1000 );
-
             const renderer = new THREE.WebGLRenderer();
             renderer.setSize( window.innerWidth, window.innerHeight );
-            document.body.appendChild( renderer.domElement );
+            renderer.setClearColor( 0xffff00, 1 ); // cor do fundo branco -> Changing three.js background to transparent or other color
+			document.body.appendChild( renderer.domElement );
+
+			const geometry = new THREE.BoxGeometry( 1, 1, 1 );
+			const material = new THREE.MeshBasicMaterial( { color: 0xff0000 } );
+			const cube = new THREE.Mesh( geometry, material );
+			scene.add( cube );
+
+			camera.position.z = 5;
+
+			function animate() {
+			requestAnimationFrame( animate );
+			cube.rotation.x += 0.01;
+			cube.rotation.y += 0.01;
+			renderer.render( scene, camera );
+			}
+			animate();
+
 		</script>
 	</body>
 </html>
