white and black

--- a/CreatingAScene/MyFirstThreeJs.html
+++ b/CreatingAScene/MyFirstThreeJs.html
@@ -16,11 +16,11 @@
             const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
             const renderer = new THREE.WebGLRenderer();
             renderer.setSize( window.innerWidth, window.innerHeight );
-            renderer.setClearColor( 0xffff00, 1 ); // cor do fundo branco -> Changing three.js background to transparent or other color
+            renderer.setClearColor( 0xffffff, 1 ); // cor do fundo branco -> Changing three.js background to transparent or other color
 			document.body.appendChild( renderer.domElement );
 
 			const geometry = new THREE.BoxGeometry( 1, 1, 1 );
-			const material = new THREE.MeshBasicMaterial( { color: 0xff0000 } );
+			const material = new THREE.MeshBasicMaterial( { color: 0x000000 } );
 			const cube = new THREE.Mesh( geometry, material );
 			scene.add( cube );
 
@@ -28,8 +28,8 @@
 
 			function animate() {
 			requestAnimationFrame( animate );
-			cube.rotation.x += 0.01;
-			cube.rotation.y += 0.01;
+			cube.rotation.x += 0.0001;
+			cube.rotation.y += 0.0001;
 			renderer.render( scene, camera );
 			}
 			animate();
