--- a/FundamentalHello/cube.html
+++ b/FundamentalHello/cube.html
@@ -14,7 +14,7 @@
 // Alterado ligfeiramente para importar o Three.js através do site
 // 
 
-  import * as THREE from 'https://unpkg.com/three@0.129.0/build/three.module.js';
+  import * as THREE from "https://unpkg.com/three@0.129.0/build/three.module.js";
 
   function main() {
       const canvas = document.querySelector('#c');
