--- a/FundamentalHello/cube.html
+++ b/FundamentalHello/cube.html
@@ -32,8 +32,8 @@
       const boxWidth = 1;
       const boxHeight = 1;
       const boxDepth = 1;
-      const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
-
+      // const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+      const geometry = new THREE.box
       const material = new THREE.MeshBasicMaterial({color: 0x44aa88});  // greenish blue
 
       const cube = new THREE.Mesh(geometry, material);
